--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include README.rst
 recursive-include vacancies/static *
 recursive-include vacancies/templates *
+recursive-include vacancies/locale *
 recursive-include docs *
