--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = django-vacancies
-version = 0.1
+version = 0.1.1
 description = A Django app to publish Web-based vacancies.
 long_description = file: README.rst
-url = https://www.example.com/
+url = https://github.com/contmp/django-vacancies
 author = Bastian Probian
 author_email = contmp@me.com
 license = BSD-3-Clause
